# This file documents the revision history for Perl extension Catalyst.

  Bug fixes:
       - Fix replace_constructor warning to actually work if you make your
         application class immutable without that option.
       - Fix POD to refer to ->config(key => $val), rather than
         ->config->{key} = $val, as the latter form is deprecated.

  Refactoring / cleanups:
       - Deleted the Restarter engine and its Watcher code. Use the
         new Catalyst::Restarter in a recent Catalyst::Devel instead.
       - New unit test for Catalyst::Action 'unit_core_action.t' (groditi)

  New features:
       - private_path method for Catalyst::Action + docs + tests (groditi)

5.80007 2009-06-30 23:54:34

  Bug fixes:
       - Don't mangle query parameters passed to uri_for
         - Tests for this (Byron Young + Amir Sadoughi)
       - Inherited controller methods can now be specified in
         config->{action(s)}
       - Assigning an undef response body no longer produces warnings
       - Fix C3 incompatibility bug caused if you use Moose in MyApp.pm and
         add Catalyst to the right hand side of this in @ISA.
       - Make Catalyst.pm implement the Component::ApplicationAttribute
         interface so defining actions in MyApp.pm works again, if the
         actions have attributes that cause $self->_application to be used
         (like ActionClass).

  New features:
       - Add optional second argument to uri_with which appends to existing
         params rather than replacing them. (foo=1 becomes foo=1&foo=2 when
         uri_with({ foo => 2 }, { mode => 'append' }) is called on a foo=1
         URI.

5.80006 2009-06-29 23:37:47

  Bug fixes:
        - Revert change to URL encode things passed into $c->uri_for
          Args and CaptureArgs as this causes breakage to pre-existing
          applications.
        - Remove use of Test::MockObject as it doesn't install from CPAN
          in some environments.